--- a/themes/ibm-plexus-simple/layouts/index.html
+++ b/themes/ibm-plexus-simple/layouts/index.html
@@ -2,6 +2,7 @@
 <article>
   {{ .Content -}}
 </article>
+<!--
 <div class="columns">
   <h2 class="column col-12">Meet Us: Webinars and Office Hours</h2>
   <article class="column col-6 col-xs-12">
@@ -14,25 +15,12 @@
         In this Webinar we’ll show you how to get started quickly to realize your ideas and solve your challenges. 
       </div>
       <div class="card-footer">
-        <a href="https://ibm.webex.com/meet/michael.wellner" target="_blank">Join via  Cisco WebEx</a>
-      </div>
-    </div>
-  </article>
-  <article class="column col-6 col-xs-12">
-    <div class="card">
-      <div class="card-header">
-        <h3 class="card-title">Office Hours: Ask and discuss live with us</h3>
-        <div class="card-subtitle text-gray">Sat + Sun, 12.00-13.00 CET</div>
-      </div>
-      <div class="card-body">
-        Ask us anything. Discuss your hot topics with our experts. Just join our session at anytime within the office hour.
-      </div>
-      <div class="card-footer">
-        <a href="https://ibm.webex.com/meet/michael.wellner" target="_blank">Join via  Cisco WebEx</a>
+        <a href="https://ibm.webex.com/recordingservice/sites/ibm/recording/play/a9e6443922994e2caf435a014975a06d" target="_blank">Watch Replay</a>
       </div>
     </div>
   </article>
 </div>
+-->
 <article class="columns">
   <h2 class="column col-12">Get Started with IBM Cloud</h2>
   {{ range sort (where .Site.RegularPages "Section" "faq") "Params.order" }}
@@ -50,5 +38,13 @@
         {{ .Content }}
       </div>
   {{ end -}}
+</article>
+<article class="columns">
+  <h2 class="column col-12">Demos (from our Web-Session)</h2>
+  <div class="column">
+    <p>
+      <strong>Node-RED examples.</strong> [https://github.com/RapTho/codevscovid19_Demo](https://github.com/RapTho/codevscovid19_Demo)
+    </p>
+  </div>
 </article>
 {{ end -}}
